--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'DreamAvenue';
+  src: url('./assets/Font/Dream-Avenue.ttf') format('truetype');
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
