--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,15 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+.bg-img {
+  background-image: url('');
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
