--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,6 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-.bg-img {
-  background-image: url('');
-}
 
 .overlay {
   position: absolute;
@@ -25,4 +22,37 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* custom slider */
+.slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 0;
+}
+
+.slider-content {
+  overflow: hidden;
+  width: 100%; /* Adjust the width as needed */
+}
+@media (min-width: 325px) and (max-width: 1024px) {
+  .slider-content {
+    overflow: hidden;
+    width: 100%; /* Adjust the width as needed */
+  }
+}
+
+.slide {
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+  width: auto;
+}
+
+.slide-item {
+  width: 100%;
+  min-width: 100%;
+  flex: 0 0 auto;
 }
