--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   box-sizing: border-box;
 }
 
+/* overlay effect */
 .overlay {
   position: absolute;
   top: 0;
@@ -22,6 +23,14 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+}
+.overlay2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* custom slider */
@@ -55,4 +64,51 @@ body {
   width: 100%;
   min-width: 100%;
   flex: 0 0 auto;
+}
+
+/* title side bar */
+.title-bar::after {
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px;
+  height: 2px;
+  margin-left: 10px;
+  background: black;
+}
+.title-bar::before {
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px;
+  height: 2px;
+  margin-right: 10px;
+  background: black;
+}
+
+/* glass effect */
+
+.parallax-effect-glare-scale {
+  background: rgba(255, 90, 115, 0.526);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  background-color: rgb(242, 80, 148);
+  color: blue;
+  border: 4px solid black;
+  border-radius: 20px;
+  transform-style: preserve-3d;
+}
+.parallax-effect-glare-scale .inner-element {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  font-style: italic;
+  color: white;
+  transform: translateZ(60px);
 }
