--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,6 @@ body {
   overflow: hidden;
   width: 100%; /* Adjust the width as needed */
 }
-@media (min-width: 325px) and (max-width: 1024px) {
-  .slider-content {
-    overflow: hidden;
-    width: 100%; /* Adjust the width as needed */
-  }
-}
 
 .slide {
   display: flex;
@@ -86,29 +80,39 @@ body {
   background: black;
 }
 
-/* glass effect */
-
-.parallax-effect-glare-scale {
-  background: rgba(255, 90, 115, 0.526);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 300px;
-  background-color: rgb(242, 80, 148);
-  color: blue;
-  border: 4px solid black;
-  border-radius: 20px;
-  transform-style: preserve-3d;
+/* card image transition */
+.card-image {
+  object-fit: cover;
+  transition: all 1.5s ease; /* Adjust the duration for the desired smoothness */
 }
-.parallax-effect-glare-scale .inner-element {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 35px;
-  font-style: italic;
-  color: white;
-  transform: translateZ(60px);
+
+.zoom-in {
+  transform: scale(1.1); /* Zoom in effect */
+}
+
+.zoom-out {
+  transform: scale(1); /* Zoom out effect */
+}
+/* card button appear & disappear style */
+.appearStyle {
+  opacity: 1;
+  transform: translateY(20px);
+  transition: opacity 0.3s ease-in-out, transform 0.5s ease;
+}
+
+.appearStyle.appeared {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.disappearStyle {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.disappearStyle.disappeared {
+  opacity: 0;
+  transform: translateY(10px);
+  pointer-events: none;
 }
