--- a/src/Layouts/Navbar/Navbar.css
+++ b/src/Layouts/Navbar/Navbar.css
@@ -16,5 +16,11 @@ nav a.active::after {
   transition: all 0.5s linear;
 }
 
-
-
+@media (min-width: 300px) and (max-width: 767.98px) {
+  nav a.active {
+    padding-right: 20px;
+  }
+  nav a.active::after {
+    content: '';
+  }
+}
