--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,6 @@ body {
   width: 60px;
   height: 2px;
   margin-left: 10px;
-  background: black;
 }
 .title-bar::before {
   content: '';
@@ -77,7 +76,6 @@ body {
   width: 60px;
   height: 2px;
   margin-right: 10px;
-  background: black;
 }
 
 /* card image transition */
@@ -115,4 +113,17 @@ body {
   opacity: 0;
   transform: translateY(10px);
   pointer-events: none;
+}
+
+/* dark mode light mode */
+:root {
+  --body_background: white;
+  --body_color: black;
+  --link_color: navy;
+}
+
+[data-theme='dark'] {
+  --body_background: #282c34;
+  --body_color: white;
+  --link_color: blue;
 }
